--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ APP_NAME=APP_NAME
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_TIMEZONE=Asia\Shanghai
+
+CDN_URL=/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
