fix: wrong timezone.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=APP_NAME
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_TIMEZONE=Asia\Shanghai
+APP_TIMEZONE=Asia/Shanghai
 
 CDN_URL=/
 
