--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "predis/predis" : "1.0.3",
         "zizaco/entrust": "5.2.x-dev",
         "intervention/image": "2.3.7",
+        "anlutro/l4-settings": "^0.5.0",
         "lucadegasperi/oauth2-server-laravel": "5.0.*"
     },
     "require-dev": {
